[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/scenes/PaintBattleScene.gd" type="Script" id=1]
[ext_resource path="res://assets/shaders/dithering shader.tres" type="Material" id=2]
[ext_resource path="res://assets/textures/battle/arena_mask.png" type="Texture" id=3]
[ext_resource path="res://assets/textures/battle/arena.png" type="Texture" id=4]
[ext_resource path="res://assets/textures/battle/arena_paint_base.png" type="Texture" id=5]

[node name="PaintBattleScene" type="Node2D"]
script = ExtResource( 1 )

[node name="CameraHandler" type="Node2D" parent="."]

[node name="Camera" type="Camera2D" parent="CameraHandler"]
current = true
limit_left = -180
limit_top = -130
limit_right = 180
limit_bottom = 130
smoothing_enabled = true

[node name="ArenaBackground" type="Sprite" parent="."]
texture = ExtResource( 4 )

[node name="ArenaMask" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )

[node name="ArenaPaint" type="Sprite" parent="."]
material = ExtResource( 2 )
texture = ExtResource( 5 )

[node name="PaintMasks" type="Node2D" parent="."]

[node name="Entities" type="YSort" parent="."]

[node name="Bullets" type="YSort" parent="."]

[node name="Effects" type="YSort" parent="."]

[node name="LevelBorders" type="StaticBody2D" parent="."]
collision_layer = 5
collision_mask = 5

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="LevelBorders"]
polygon = PoolVector2Array( -134, 138, 125, 140, 131, -140, -101, -141, -101, -100, 100, -100, 100, 100, -100, 100, -101, -158, -124, -159 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
margin_left = 228.0
margin_top = 199.0
margin_right = 319.0
margin_bottom = 230.0
text = "R to Reset
ESC to go back"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}
